<resources>
    <string name="app_name">Logica App</string>
    <string name="conjunction_and">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_and_b">A ^ B</string>
    <string name="bool_true">True</string>
    <string name="bool_false">False</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Wrong!</string>
    <string name="value_incorrect">Incorrect value in %s Result</string>
</resources>
